--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-.meta filter=lfs diff=lfs merge=lfs -text
-.data filter=lfs diff=lfs merge=lfs -text
+*.meta filter=lfs diff=lfs merge=lfs -text
+*.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
